Fazendo pagina Login

--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -24,7 +24,10 @@
                     <div class="nav icon-3"></div>
                     <span>Comparar</span>
                 </a>
-                <a class="login-btn">Fazer login</a>
+                <a class="login-btn" href="login.html">
+                    <div class="nav icon-4"></div>
+                    <span>Fazer login</span>
+            </a>
             </nav>
         </header>
 
