--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -176,6 +176,9 @@
                         </div>
                     </div>
                 </div>
+                <div style="text-align:center; margin-top:2vh;">
+                    <button class="load-more-btn">Carregar mais</button>
+                </div>
             </div>
         </main>
 
