--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -140,22 +140,22 @@
             <!-- Quadro de Pokémons -->
             <div class="pokemon-board">
                 <div class="board-header">
-                    <h3>Filtrar</h3>
-                    <h3>Organizar por</h3>
-                    <div class="sort-select">
-                        <button class="sort-btn">
-                            <img src="../assets/pokeball-icon.svg" alt="Pokeball" class="pokeball-icon">
-                            <span class="sort-label">A - Z</span>
-                            <span class="arrow">▼</span>
-                        </button>
-                        <ul class="sort-options">
-                            <li data-sort="az">A - Z</li>
-                            <li data-sort="za">Z - A</li>
-                            <li data-sort="id-asc"># Crescente</li>
-                            <li data-sort="id-desc"># Decrescente</li>
-                        </ul>
+                    <div class="board-controls">
+                        <h3>Filtrar / Organizar Por</h3>
+                        <div class="sort-select">
+                            <button class="sort-btn">
+                                <img src="../assets/pokeball-icon.svg" alt="Pokeball" class="pokeball-icon">
+                                <span class="sort-label">A - Z</span>
+                                <span class="arrow">▼</span>
+                            </button>
+                            <ul class="sort-options">
+                                <li data-sort="az">A - Z</li>
+                                <li data-sort="za">Z - A</li>
+                                <li data-sort="id-asc">Crescente</li>
+                                <li data-sort="id-desc">Decrescente</li>
+                            </ul>
+                        </div>
                     </div>
-
                 </div>
                 
                 <!-- Grid de Cards -->
