--- a/html/sobre-pokemon.html
+++ b/html/sobre-pokemon.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Pokémon - PokéCompanion</title>
     <link rel="stylesheet" href="../css/pokedex.css">
+    <link rel="stylesheet" href="../css/sobre-pokemon.css">
     <link rel="stylesheet" href="../css/styleguide.css">
     <link rel="icon" type="imagem/jpg" href="../assets/icone1.png">
 </head>
