termino do projeto

--- a/html/pagina-inicial.html
+++ b/html/pagina-inicial.html
@@ -71,7 +71,7 @@
 
     </div>
 
-    <!-- Rodapé -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="footer-left">
             <div class="footer-brand">PokéCompanion</div>
@@ -104,6 +104,5 @@
 
     <!-- Script principal -->
     <script src="../js/pagina-inicial.js"></script>
-
 </body>
 </html>
