--- a/html/comparador.html
+++ b/html/comparador.html
@@ -77,6 +77,7 @@
     <footer class="footer">
         <div class="footer-left">
             <div class="footer-brand">PokéCompanion</div>
+
             <div class="footer-links">
                 <h4>Links</h4>
                 <ul>
@@ -86,17 +87,18 @@
                 </ul>
             </div>
         </div>
-        
+
         <div class="footer-divider"></div>
-        
+
         <div class="footer-right">
             <h3>Sobre</h3>
             <p class="footer-description">
-                Este site foi desenvolvido como parte de um projeto acadêmico de Engenharia de Software, 
+                Este site foi desenvolvido como parte de um projeto acadêmico de Engenharia de Software,
                 com objetivo de praticar prototipagem e desenvolvimento web.
             </p>
+
             <p class="footer-copyright">
-                PokéCompanion &copy; 2025<br>
+                PokéCompanion © 2025<br>
                 Projeto acadêmico — Engenharia de Software
             </p>
         </div>
